Fix the damn overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,6 @@
 	--main-font: 'Montserrat', sans-serif;
 }
 
-* {
-	overflow-x: hidden;
-}
-
 body {
 	overflow-x: hidden;
 	position: relative;
@@ -142,6 +138,7 @@ a.more {
 	/* background: #3b5d50; */
 	background: var(--bg-color);
 	padding: calc(4rem - 30px) 0 0rem 0;
+	overflow-x: hidden;
 }
 @media (min-width: 768px) {
 	.hero {
